# ComfyUI-Bori-JsonSetGetConverter

./: LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
convert/: sd1pt5DS8_mape_1k_v001.json  sd1pt5DS8_nonMape_1k_v001.json
nodes/: Bori_JsonGetSetConvert.py  Bori_JsonUtils.py
