[project]
name = "ComfyUI-Bori-JsonSetGetConverter"
description = "This is a custom node for ComfyUI that takes in a file path full of json's and finds the mape variable nodes in them and converts them to the kjnode set and get nodes."
version = "0.1.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/boricuapab/ComfyUI-Bori-JsonSetGetConverter"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "boriNodes"
DisplayName = "ComfyUI-Bori-JsonSetGetConverter"
Icon = ""
includes = []
